<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_medium_3"
        app:cardElevation="@dimen/margin_small"
        android:layout_margin="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_tourimg"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="0.5"
            android:scaleType="fitXY"
            android:src="@drawable/maldive" />

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3">


            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_tourname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:maxLines="2"
                    android:text="@string/tv_sample_tour"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <TextView
                android:id="@+id/tv_tourservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="@string/tv_services"
                android:textColor="@color/color_grey"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_medium"/>

            <TextView
                android:id="@+id/tv_tourlocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/tv_tourfee"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                android:visibility="visible"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_card_medium_2">

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_rating"
                android:textColor="@color/color_white"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_star_black_24dp" />
        </LinearLayout>



    </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>